2005-11-29  Darin Adler  <darin@apple.com>

        - fixed broken tree (from my last check-in)

        * kwq/DOM-CSS.mm: Added "using namespace DOM" and an import of "dom_docimpl.h".

2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed <rdar://problem/4089752> Duplicate method implementation for -[DOMDocument getComputedStyle::]
          also http://bugzilla.opendarwin.org/show_bug.cgi?5682

        * kwq/DOM.mm: Removed extra implementation of -[DOMDocument getComputedStyle::].
        * kwq/DOM-CSS.mm: (-[DOMDocument getComputedStyle::]): Copied slightly better implementation from
        DOM.mm in here.

2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by Eric.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5681
          font family management can be faster by avoiding NSString/autorelease

        * kwq/KWQFontFamily.h: Replace _NSFamily with _CFFamily.
        * kwq/KWQFontFamily.mm:
        (KWQFontFamily::KWQFontFamily): Ditto.
        (KWQFontFamily::operator=): Ditto.
        (KWQFontFamily::getNSFamily): More of the same.
        (KWQFontFamily::setFamily): Ditto.

2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5679
          speed up QTime by removing unnecessary CFAbsoluteTimeGetGregorianDate

        * kwq/KWQDateTime.mm:
        (QTime::msec): Just multiply and mod the time in seconds, don't bother converting to
        a Gregorian date first, since that won't affect fractional seconds.
        (QTime::addMSecs): Multiply by 1/1000 instead of dividing by 1000.

2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - fixed <rdar://problem/4300202> JavaScript event keyCode/charCode/which is 25 for shift+tab, should be 9 (5678)
          also http://bugzilla.opendarwin.org/show_bug.cgi?id=5678

        * kwq/KWQEvent.mm: