@@ -77,8 +77,8 @@ public:
 
     QString prettyURL() const;
     
+    CFURLRef createCFURL() const;
     NSURL *getNSURL() const;
-    NSData *getNSData() const;
 
     bool isLocalFile() const;
 
